--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,15 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
         "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.1",
-        "mysql2": "^3.15.3"
+        "mysql2": "^3.15.3",
+        "node-cron": "^4.2.1",
+        "nodemailer": "^7.0.11"
     }
 }
