--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
+    "animate.css": "^4.1.1",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "moment": "^2.29.4",
@@ -13,7 +14,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
